[package]
name = "keypress"
version = "0.1.0"
authors = ["rayylee <rayylee@foxmail.com>"]
edition = "2018"

# https://crates.io
[dependencies]
lazy_static = "1.4.0"
yew = "0.18"
js-sys = "0.3.47"
wasm-bindgen = "0.2.70"
serde_json = "1.0.62"
serde = { version = "1.0", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.47"
features = [
    'HtmlAudioElement',
    'OfflineAudioContext',
    'AudioContext',
    'AudioBufferSourceNode',
    'AudioBuffer',
    'AudioNode',
    'AudioDestinationNode',
    'BaseAudioContext',
]
