[package]
name = "keypress"
version = "0.1.0"
authors = ["rayylee <rayylee@foxmail.com>"]
edition = "2021"

# https://crates.io
[dependencies]
lazy_static = "1.4.0"
yew = "0.18"
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.47"
features = [
    'HtmlAudioElement',
    'OfflineAudioContext',
    'AudioContext',
    'AudioBufferSourceNode',
    'AudioBuffer',
    'AudioNode',
    'AudioDestinationNode',
    'BaseAudioContext',
]
